Moved the bootstrap gem to the assets group

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -7,8 +7,6 @@ gem 'rails', '3.2.12'
 
 gem 'sqlite3'
 
-# Adding Twitter Bootstrap SASS gem 
-gem 'bootstrap-sass'
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -16,6 +14,8 @@ group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
 
+  # Adding Twitter Bootstrap SASS gem 
+  gem 'bootstrap-sass', '~> 2.3.1.0'
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 
   gem 'uglifier', '>= 1.0.3'
