Revert "Merge pull request #145 from MGhanem/C3_SalmaFG_S07"
This reverts commit 62994a3dd5d035fa2e647df16f16f15919bbf321, reversing
changes made to 116c6995c89a97336007b882e10ffaf5f472bc71.

--- a/arability/test/fixtures/projects.yml
+++ b/arability/test/fixtures/projects.yml
@@ -1,21 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
-  category: 
-  formal: false
-  minAge: 1
-  maxAge: 1
-  description: MyText
-  words: 
-  sharedWith: 
+  developer: 
 
 two:
-  name: MyString
-  category: 
-  formal: false
-  minAge: 1
-  maxAge: 1
-  description: MyText
-  words: 
-  sharedWith: 
+  developer: 
