--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -7,6 +7,9 @@ gem 'rails', '3.2.12'
 
 gem 'sqlite3'
 
+# Gems required for automated documentation
+gem 'yard'
+gem 'redcarpet'
 
 # Gems used only for assets and not required
 # in production environments by default.
