#86 making the sign up view better by select instead of text

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -27,6 +27,10 @@ gem 'execjs'
 # gem for age validations 
 gem 'date_validator'
 
+#gem used to select countries
+gem 'country-select'
+
+
 # group :nix do
 #   gem 'therubyracer', :platforms => :ruby
 # end
