--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -11,6 +11,9 @@ gem 'sqlite3'
 gem 'yard'
 gem 'redcarpet'
 
+# Gem for attaching images to models
+gem 'paperclip', '~> 3.0'
+
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
