Added better errors

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -55,7 +55,10 @@ gem 'country-select'
 
 # To use debugger
 # gem 'debugger'
-
 # devise gem used for authentication
 gem 'devise','2.0'
 
+group :development do
+  gem 'better_errors'
+  gem 'binding_of_caller'
+end
