--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -46,3 +46,9 @@ gem 'execjs'
 # devise gem used for authentication
 gem 'devise','2.0'
 
+gem "rspec-rails", :group => [:test, :development]
+group :test do
+  gem "factory_girl_rails"
+  gem "capybara"
+  gem "guard-rspec"
+end
