[issue #168][NW] commiting for pull

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -57,7 +57,7 @@ gem 'country-select'
 # gem 'capistrano'
 
 # To use debugger
-gem 'debugger'
+# gem 'debugger'
 
 # devise gem used for authentication
 gem 'devise','2.0'
