[Issue #209][WIP] Salma fixed edit function

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -11,6 +11,8 @@ gem 'omniauth'
 
 gem "oa-openid"
 
+# gem 'omniauth-google-oauth2'
+
 # Gems required for automated documentation
 gem 'yard'
 gem 'redcarpet'
