--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -7,11 +7,7 @@ gem 'rails', '3.2.12'
 
 gem 'sqlite3'
 
-gem 'omniauth'
-
-gem "oa-openid"
-
-# gem 'omniauth-google-oauth2'
+gem 'omniauth-google-oauth2'
 
 # Gems required for automated documentation
 gem 'yard'
