--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -30,7 +30,7 @@ group :assets do
   gem 'bootstrap-sass', '~> 2.3.1.0'
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 
-  gem 'tabulous'
+  gem 'tabulous', '1.3.0'
   gem 'uglifier', '>= 1.0.3'
 end
 
