[Issue #193] Redid my work after wrong merge into master

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -69,3 +69,9 @@ gem 'country-select'
 # devise gem used for authentication
 gem 'devise','2.0'
 
+gem "rspec-rails", :group => [:test, :development]
+group :test do
+  gem "factory_girl_rails"
+  gem "capybara"
+  gem "guard-rspec"
+end
