[WIP][issue#178]facebook sharing score button has been implemented and integration with game view is pending

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -69,6 +69,7 @@ gem 'country-select'
 # devise gem used for authentication
 gem 'devise','2.0'
 
+gem "koala"
 
 gem "rspec-rails", :group => [:test, :development]
 group :test do
