--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -36,6 +36,12 @@ gem 'date_validator'
 #gem used to select countries
 gem 'country-select'
 
+gem "rspec-rails", :group => [:test, :development]
+group :test do
+  gem "factory_girl_rails"
+  gem "capybara"
+  gem "guard-rspec"
+end
 
 # group :nix do
 #   gem 'therubyracer', :platforms => :ruby
