--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -6,7 +6,7 @@ gem 'rails', '3.2.12'
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'sqlite3'
-
+gem 'jasmine'
 #gem 'omniauth'
 
 #gem "oa-openid"
