[Issue #363][NW] simple views with simple controller

--- a/arability/Gemfile
+++ b/arability/Gemfile
@@ -76,6 +76,7 @@ gem 'fb_graph'
 group :development do
   gem 'better_errors'
   gem 'binding_of_caller'
+  gem 'meta_request'
 end
 
 group :test, :development do
